--- a/Figaro/Figaro/Views/VerChef.xaml
+++ b/Figaro/Figaro/Views/VerChef.xaml
@@ -73,13 +73,13 @@
             </Grid.ColumnDefinitions>
             <Label x:Name="PerfilTab" TextColor="#CC0311" Text="PERFIL" FontSize="14"
                     FontAttributes="None"  Grid.Column="0" HorizontalOptions="Center"/>
-            <Label x:Name="DisponibilidadTab" Text="DISPONIBILIDAD" FontSize="14"
+            <Label x:Name="PlatosTab" Text="PLATOS" FontSize="14"
                     FontAttributes="None"  Grid.Column="1" HorizontalOptions="Center"/>
             <Label x:Name="OpinionesTab" Text="OPINIONES" FontSize="14"
                     FontAttributes="None"  Grid.Column="2" HorizontalOptions="Center"/>
             <BoxView x:Name="LineaPerfilTab" Color="#CC0311" HeightRequest="1"
                       VerticalOptions="End" Grid.Column="0" Scale="1.1"/>
-            <BoxView x:Name="LineaDisponibilidadTab" Color="Black" HeightRequest="1"
+            <BoxView x:Name="LineaPlatosTab" Color="Black" HeightRequest="1"
                       VerticalOptions="End" Grid.Column="1" Scale="1.1" Opacity="0.5"/>
             <BoxView x:Name="LineaOpinionesTab" Color="Black" HeightRequest="1"
                       VerticalOptions="End" Grid.Column="2" Scale="1.1" Opacity="0.5"/>
@@ -90,9 +90,6 @@
             <Label Text="ABOUT US" FontSize="16" TextColor="Gray"/>
             <Label Text="{Binding ChefSeleccionado.Descripcion}" FontSize="14" TextColor="Gray"/>
             <Label Text="DISPONIBILIDAD" FontSize="16" TextColor="Gray" Margin="0,10,0,0"/>
-            <Label Text="-----------POR HACER-----------" FontSize="14" Opacity="0.7"
-             TranslationX="10" TranslationY="14"
-             HeightRequest="100"/>
           </StackLayout>
 
           <!--Platos-->
