--- a/Figaro/Figaro/Views/MenuPage.xaml
+++ b/Figaro/Figaro/Views/MenuPage.xaml
@@ -18,7 +18,7 @@
     <StackLayout Orientation="Vertical"
                   IsEnabled="{Binding IsIdle}" IsVisible="{Binding IsIdle}">
 
-      <Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />
+      <!--<Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />-->
       <Label x:Name="AvisoMenus" IsEnabled="{Binding NoMenus}" IsVisible="{Binding NoMenus}"
              FontSize="24" TextColor="#ddd" HorizontalOptions="Center"
              Text="No hay menus disponibles"/>
