--- a/Figaro/Figaro/Views/PlatosPage.xaml
+++ b/Figaro/Figaro/Views/PlatosPage.xaml
@@ -18,7 +18,7 @@
     <StackLayout Orientation="Vertical" 
                  IsEnabled="{Binding IsIdle}" IsVisible="{Binding IsIdle}">
 
-      <Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />
+      <!--<Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />-->
       <Label x:Name="AvisoPlatos" IsEnabled="{Binding NoPlatos}" IsVisible="{Binding NoPlatos}" 
              FontSize="24" TextColor="#ddd" HorizontalOptions="Center"
              Text="No hay platos disponibles"/>
