--- a/Figaro/Figaro/Views/ChefsPage.xaml
+++ b/Figaro/Figaro/Views/ChefsPage.xaml
@@ -20,11 +20,11 @@
                  IsEnabled="{Binding IsIdle}" IsVisible="{Binding IsIdle}">
       <!--<Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />-->
 
-      <Label x:Name="AvisoChefs" IsEnabled="{Binding NoChefs}" IsVisible="{Binding NoChefs}"
+      <Label x:Name="AvisoChefs" IsEnabled="{Binding NoFecha}" IsVisible="{Binding NoFecha}"
              FontSize="24" TextColor="#CC0311" HorizontalOptions="Center"
              Text="No hay chefs disponibles"/>
       <Label x:Name="AvisoSeleccionarDiaHora" Margin="12,6" HorizontalOptions="Center"
-            IsVisible="{Binding NoFecha}" IsEnabled="{Binding NoFecha}" FontSize="20" TextColor="#CC0311"/>
+            IsVisible="{Binding NoChef}" IsEnabled="{Binding NoChef}" FontSize="20" TextColor="#CC0311"/>
       <ListView x:Name="ListaChefsView"
                 ItemsSource="{Binding ListaChefs}"
                 HasUnevenRows="true"
@@ -78,7 +78,7 @@
         </ListView.ItemTemplate>
       </ListView>
 
-      <StackLayout HeightRequest="50" BackgroundColor="#ddd">
+      <StackLayout HeightRequest="50" BackgroundColor="#ddd" MinimumHeightRequest="40">
         <Grid>
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -87,13 +87,13 @@
             <ColumnDefinition Width="*"/>
           </Grid.ColumnDefinitions>
           <Image x:Name="Menu_Button" Grid.Column="0" Source="bottom_menu.png"
-                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
-          <Image x:Name="Plato_Button" Grid.Column="1" 
-                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit" Margin="0,6"/>
+          <Image x:Name="Plato_Button" Grid.Column="1" Source="{Binding PlatoFooter}"
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit" Margin="0,6"/>
           <Image x:Name="Chefs_Button" Grid.Column="2" Source="bottom_chefs_select.png"
-                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit" Margin="0,6"/>
           <Image x:Name="Profile_Button" Grid.Column="3" Source="bottom_profile.png"
-                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit" Margin="0,6"/>
         </Grid>
       </StackLayout>
     </StackLayout>
