--- a/Figaro/Figaro/Views/PlatosPage.xaml
+++ b/Figaro/Figaro/Views/PlatosPage.xaml
@@ -66,7 +66,7 @@
         </ListView.ItemTemplate>
       </ListView>
 
-      <StackLayout HeightRequest="50" BackgroundColor="#ddd">
+      <StackLayout HeightRequest="50" BackgroundColor="#ddd" MinimumHeightRequest="40">
         <Grid>
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -75,13 +75,13 @@
             <ColumnDefinition Width="*"/>
           </Grid.ColumnDefinitions>
           <Image x:Name="Menu_Button" Grid.Column="0" Source="bottom_menu.png"
-                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
-          <Image x:Name="Plato_Button" Grid.Column="1"
-                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit" Margin="0,6"/>
+          <Image x:Name="Plato_Button" Grid.Column="1" Source="{Binding PlatoFooterActual}"
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit" Margin="0,6"/>
           <Image x:Name="Chefs_Button" Grid.Column="2" Source="bottom_chefs.png"
-                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit" Margin="0,6"/>
           <Image x:Name="Profile_Button" Grid.Column="3" Source="bottom_profile.png"
-                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit" Margin="0,6"/>
         </Grid>
       </StackLayout>
     </StackLayout>
